# CASPER-HACK

./: .gitignore  README.md  docker-compose.yml  mcp_config.json
.agents/: ARCHITECTURE.md
derisk-agent/: Dockerfile  Dockerfile.mock  main.py  mock_stream.py  requirements.txt  risk_evaluator.py  simulate_exploit.py  stream_listener.py  x402_client.py
derisk-agent/.mypy_cache/3.14/: cache.0.db-shm  cache.0.db-wal  cache.1.db-shm  cache.1.db-wal  cache.10.db-shm  cache.10.db-wal  cache.11.db-shm  cache.11.db-wal  cache.12.db-shm  cache.12.db-wal  cache.13.db-shm  cache.13.db-wal  cache.14.db-shm  cache.14.db-wal  cache.15.db-shm  cache.15.db-wal  cache.2.db-shm  cache.2.db-wal  (+14 more)
derisk-agent/tests/: test_agent.py
derisk-contracts/: Cargo.toml  Odra.toml  deploy_to_testnet.py
derisk-contracts/src/: derisk_vault.rs  lib.rs
derisk-dashboard/: audit_logs.json  package-lock.json  package.json
derisk-dashboard/app/: layout.tsx  page.tsx
derisk-dashboard/types/: casper-js-sdk.d.ts
derisk-dashboard/utils/: casper-server.ts
derisk-web/: Dockerfile  package-lock.json  package.json
derisk_onchain/: CHANGELOG.md  Cargo.toml  Odra.toml  README.md  build.ps1  deploy_to_testnet.py
derisk_onchain/.cargo/: config.toml
derisk_onchain/src/: lib.rs
derisk_vault/: CHANGELOG.md  Cargo.toml  Odra.toml  README.md  ai_agent.py  deploy_to_testnet.py  requirements.txt
derisk_vault/src/: derisk_vault.rs  lib.rs
lovable/: ANTIGRAVITY_MIGRATION.md  Dashboard.tsx  Header.tsx  SentinelFeed.tsx  StatusCards.tsx  VaultForm.tsx  app.tsx  design.md  index.tsx  styles.css
(+12 files in other folders)
