
[package]
name = "derisk_onchain"
version = "0.1.0"
rust-version = "1.77.2"
edition = "2021"

[dependencies]
odra = "2.8.1"

[build-dependencies]
odra-build = "2.8.1"

[dev-dependencies]
odra = "2.8.1"

[[bin]]
name = "derisk_onchain_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "derisk_onchain_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
opt-level = "z"        
lto = true             
codegen-units = 1      
panic = "abort"  # <--- THIS IS THE FIX
overflow-checks = false

[profile.release.package."*"]
opt-level = "z"